kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudnorth
  labels:
    name: cloudnorth
    environment: base
