kubernetes/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cloudnorth
  labels:
    app: backend
    tier: backend
spec:
  selector:
    app: backend
    tier: backend
  ports:
  - port: 80
    targetPort: 5000
    name: http
  type: ClusterIP
